[NUM-2169] - Deletion of unapproved users